--- a/CSS/08 Aufgabe WH CSS 5/style.css
+++ b/CSS/08 Aufgabe WH CSS 5/style.css
@@ -47,3 +47,57 @@ table {
 	border-spacing: 0;
 }
 
+.flexendesgrid {
+	height: 400px;
+	width: 400px;
+	display: grid;
+	grid-template-columns: 200px 200px;
+	position: relative;
+	left: 125px;
+	top: 50px;
+}
+
+.gridbox {
+	background-color: blue;
+}
+
+.item1 {
+	background-color: lightgreen;
+	height: 300px;
+}
+
+.item2 {
+	background-color: lightblue;
+	height: 300px;
+}
+
+.item3 {
+	background-color: orangered;
+	grid-column-start: span 2;
+	height: 100px;
+}
+
+.blackbox {
+	background-color: black;
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	right: 0px;
+}
+
+.friedegg {
+	background-color: lightgray;
+	height: 250px;
+	width: 250px;
+	position: absolute;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	bottom: 0px;
+}
+
+.yolk {
+	background-color: orange;
+	height: 63px;
+	width: 63px;
+}
