--- a/CSS/09 Aufgabe ORF/style.css
+++ b/CSS/09 Aufgabe ORF/style.css
@@ -60,7 +60,7 @@ body {
 
 .ueberdiv {
     margin-left: 5%;
-    background-color: #ba131a;   
+    background-color: #ba131a;  
     width: 860px;
     position: relative;
     font-size: 14px;
@@ -86,5 +86,44 @@ body {
 }
 
 .logoleiste {
-    width: 50px;
+    width: 100%;
+    margin: 15px;
+    display: flex;
+
+}
+
+.wrapperorf {
+    display: flex;
+}
+
+.wrappersonderaktionen {
+    position: relative;
+    width: 600px;
+}
+
+.vorarlberg {
+    font-size: 26px;
+}
+
+.orf {
+    width: 100px;
+}
+
+.neunplaetzeneunschaetze {
+    width: 110px;
+    justify-content: end;
+    position: absolute;
+    right: 0px;
+}
+
+.heading2 {
+    background-color: #70140c;
+    position: relative;
+}
+
+.listendings2 {
+    display: inline-flex;
+    justify-content: space-evenly;
+    position: relative;
+    width: 100%;
 }
